--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13357,3 +13357,13 @@ p {
 #navbar .navbar {
   margin-bottom: 20px;
 }
+
+.profile-head {
+  transform: translateY(5rem);
+}
+
+.cover {
+  background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=120);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
